--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "postinstall": "prisma generate",
-    "build": "nest build && prisma generate",
+    "postinstall": "prisma generate --schema=src/prisma/schema.prisma",
+    "build": "nest build && prisma generate --schema=src/prisma/schema.prisma",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "prisma generate && nest start",
+    "start": "prisma generate --schema=src/prisma/schema.prisma && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
